--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,11 @@
 /.pnp
 .pnp.js
 
+
+.env
+
+env
+
 # testing
 /coverage
 
@@ -34,4 +39,4 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
-.env
+
